--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 	"categories": [
 		"Themes"
 	],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mjbramich/MY-THEME"
+  },
   "galleryBanner": {
     "color":"#23272d",
     "theme": "dark"
